BUG: 250300

Commit Tony Bloomfield's patch to fix database name being dropped when a password is used for database logins.


svn path=/trunk/extragear/office/kmymoney/; revision=1175070